--- a/index.html
+++ b/index.html
@@ -3,41 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple CRUD System</title>
+    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
     <div class="container d-flex gap-3 flex-column pt-3">
-      <div
-        class="d-flex align-items-center gap-3 pt-3 flex-column col-4 shadow rounded border p-3"
-      >
-        <input
-          id="phoneName"
-          class="form-control"
-          type="text"
-          placeholder="Enter new Phone Name"
-        />
-        <input
-          id="phonePrice"
-          class="form-control"
-          type="number"
-          placeholder="Enter new Phone Price"
-        />
-        <input
-          id="phoneQty"
-          class="form-control"
-          type="number"
-          placeholder="Enter new Phone Qty"
-        />
-        <button class="btn btn-success col-12" onclick="addNewPhone()">
+      <div class="d-flex justify-content-end">
+        <button class="btn btn-success col-2" onclick="openAddModal()">
           Add New Phone
         </button>
+      </div>
+      <div class="addPhoneModal" onclick="closeAddModal()">
+        <div
+          class="content animate__animated animate__fadeInDown d-flex flex-column gap-3 p-3 rounded shadow border"
+          onclick="event.stopPropagation()"
+        >
+          <input
+            id="phoneName"
+            class="form-control"
+            type="text"
+            placeholder="Enter new Phone Name"
+          />
+          <input
+            id="phonePrice"
+            class="form-control"
+            type="number"
+            placeholder="Enter new Phone Price"
+          />
+          <input
+            id="phoneQty"
+            class="form-control"
+            type="number"
+            placeholder="Enter new Phone Qty"
+          />
+          <button class="btn btn-success col-12" onclick="addNewPhone()">
+            Add New Phone
+          </button>
+        </div>
       </div>
       <table class="table table-dark table-bordered">
         <thead>
@@ -61,6 +73,36 @@
         </tr> 
         --></tbody>
       </table>
+      <!-- Modal To Edit Product -->
+      <div class="myModal" onclick="closeModal()">
+        <div
+          onclick="event.stopPropagation()"
+          class="content animate__animated animate__fadeInDown d-flex flex-column gap-3 p-3 rounded shadow border"
+        >
+          <h3>Edit Phone Data</h3>
+          <input
+            id="phoneNameEdit"
+            class="form-control"
+            type="text"
+            placeholder="Enter new Phone Name"
+          />
+          <input
+            id="phonePriceEdit"
+            class="form-control"
+            type="number"
+            placeholder="Enter new Phone Price"
+          />
+          <input
+            id="phoneQtyEdit"
+            class="form-control"
+            type="number"
+            placeholder="Enter new Phone Qty"
+          />
+          <button class="btn btn-primary col-12" onclick="updateData()">
+            Save Phone Info
+          </button>
+        </div>
+      </div>
     </div>
     <script src="./js/index.js"></script>
   </body>
